--- a/hardware.css
+++ b/hardware.css
@@ -6,6 +6,7 @@ li {
     border:solid black 2px;
 }
 h1 {
+    font-size:45px;
     border-top:double;
     text-align:center;
     border-bottom:double;
@@ -13,6 +14,7 @@ h1 {
     margin-right:250px;
 }
 h2{
+    font-size:30px;
     margin-left:150px;
     margin-right:150px;
     border-top:solid;
@@ -23,7 +25,7 @@ h2{
 a {
   background-color:gray;  
 }
-.hardwarep{    
+.hardwarep{
     color:black;
     margin-left:150px;
     margin-right:150px;
@@ -33,4 +35,20 @@ a {
     display:block;
     margin-left:auto;
     margin-right:auto;
+}
+
+.hardware-image:hover{
+    height:400px;
+    width:400px;
+    border-color:red;
+}
+.link{
+    border-style:solid;
+    border-color:black;
+    font-size:20px;
+    color:red;
+}
+.link:hover{
+    background-color:white;
+    font-size:30px;
 }
