--- a/navbar.css
+++ b/navbar.css
@@ -4,7 +4,7 @@
 }
 
 #navbar li{
-    color:white;
+    color:black;
     transition: 0.5s linear;
     display:inline-block;
     border: 2px solid white;
@@ -14,5 +14,4 @@
     color:gray;
     font-size:23px;
     background-color:red;
-    
 }
