--- a/hardware.css
+++ b/hardware.css
@@ -60,3 +60,17 @@ a {
     background-color:white;
     font-size:30px;
 }
+#navbar{
+    text-align: center;
+}
+#navbar a {
+    border:solid;
+    color:white;
+}
+#navbar li {
+    font-size: 20px;
+    display: inline-block;
+}
+#navbar li:hover{
+    font-size:25px;
+}
